syntax = "proto3";

package pipeline.v1;

option go_package = "github.com/souleb/buildeploy/proto/pipeline/v1";

//import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service PipelineService {
  rpc CreatePipeline(CreatePipelineRequest) returns (CreatePipelineResponse) {
		option (google.api.http) ={
			post: "/v1/pipeline"
			body: "item"
		};
	}
}

message CreatePipelineResponse {
  string id = 1;
}

message CreatePipelineRequest {
	Pipeline item = 1;
}

message Pipeline {
	int64 id = 1;
	string name = 2;
	repeated Workflow workflows = 3;
}

message Workflow {
	int64 id = 1;
	string name = 2;
	repeated Job jobs = 3;
	//google.protobuf.Timestamp created_at = 6;
	//google.protobuf.Timestamp updated_at = 7;
}

message Job {
	int64 id = 1;
	string name = 2;
	message Runner {
		oneof type {
			Docker docker = 1;
			Machine machine = 2;
		}
	}
	Runner runner = 3;
	Steps steps = 4;
	string env = 5;
	string branches = 6;
	repeated string needs = 7;
}

message Docker {
	string image = 1;
	string tags = 2;
}

message Machine {
	string os = 1;
	string cpus = 2;
	string memory = 3;
}

message Steps {
		repeated string command = 1;
}